update namenumerology and payment

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+app/Http/Controllers/NumerologyController copy.php
+/resources/views/payment/payment.blade copy.php
+/resources/views/payment/paymentxxx.blade copy 2.php
