squence,Numerology type hide,Remove Aoc,add form  advanced numerolgy

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ yarn-error.log
 app/Http/Controllers/NumerologyController copy.php
 /resources/views/payment/payment.blade copy.php
 /resources/views/payment/paymentxxx.blade copy 2.php
+/resources/views/payment/paymenttest.blade.php
