update all numerology-page's with payment/db

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ resources/views/payment/payment.blade.php
 resources/views/payment/temp.blade.php
 resources/views/payment/payment2.blade.php
 resources/views/payment/payment.blade.php
+resources/views/Website/pages/1numerology.blade copy.php
