--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.9",
+        "mpdf/mpdf": "^8.2",
         "razorpay/razorpay": "^2.9",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
